Network/Base/templates/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authentik

  labels:
    wan-mode: 'public'
    lan-mode: 'private'

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kuadrant-core-prod
      name: main-gw
      sectionName: https

  hostnames:
    - auth-proxy.mylogin.space
  rules:
    - backendRefs:
        - name: authentik-outpost
          port: 80
